RESOLVED FIXED 122474
Pass VM instead of ExecState to JSNotAnObject constructor.
https://bugs.webkit.org/show_bug.cgi?id=122474
Summary Pass VM instead of ExecState to JSNotAnObject constructor.
Andreas Kling
Reported 2013-10-07 17:27:05 PDT
Obsessive? Who?
Attachments
Patch (2.98 KB, patch)
2013-10-07 17:31 PDT, Andreas Kling
no flags
Andreas Kling
Comment 1 2013-10-07 17:31:21 PDT
WebKit Commit Bot
Comment 2 2013-10-07 20:27:38 PDT
Comment on attachment 213631 [details] Patch Clearing flags on attachment: 213631 Committed r157082: <http://trac.webkit.org/changeset/157082>
WebKit Commit Bot
Comment 3 2013-10-07 20:27:39 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.