Pass VM instead of ExecState to JSNotAnObject constructor. <https://webkit.org/b/122474>

Reviewed by Sam Weinig.

JSNotAnObject was only using the ExecState to find the VM.


Canonical link: https://commits.webkit.org/140553@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@157082 268f45cc-cd09-0410-ab3c-d52691b4dbfc