Source/JavaScriptCore/runtime/JSCJSValue.cpp
@@ -74,8 +74,9 @@ JSObject* JSValue::toObjectSlowCase(ExecState* exec, JSGlobalObject* globalObjec
         return constructBooleanFromImmediateBoolean(exec, globalObject, asValue());
 
     ASSERT(isUndefinedOrNull());
-    exec->vm().throwException(exec, createNotAnObjectError(exec, *this));
-    return JSNotAnObject::create(exec);
+    VM& vm = exec->vm();
+    vm.throwException(exec, createNotAnObjectError(exec, *this));
+    return JSNotAnObject::create(vm);
 }
 
 JSValue JSValue::toThisSlowCase(ExecState* exec, ECMAMode ecmaMode) const
@@ -106,8 +107,9 @@ JSObject* JSValue::synthesizePrototype(ExecState* exec) const
         return exec->lexicalGlobalObject()->booleanPrototype();
 
     ASSERT(isUndefinedOrNull());
-    exec->vm().throwException(exec, createNotAnObjectError(exec, *this));
-    return JSNotAnObject::create(exec);
+    VM& vm = exec->vm();
+    vm.throwException(exec, createNotAnObjectError(exec, *this));
+    return JSNotAnObject::create(vm);
 }
 
 // ECMA 8.7.2
